deployment/fusionauth/aws/kubernetes/base/fusionauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusionauth
  labels:
    app: fusionauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fusionauth
  template:
    metadata:
      name: fusionauth
      labels:
        app: fusionauth
    spec:
      containers:
        - name: fusionauth
          image: fusionauth/fusionauth-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9011
              protocol: TCP
      restartPolicy: Always
