deployment/fusionauth/aws/kubernetes/base/fusionauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusionauth
spec:
  selector:
    app: fusionauth
  ports:
    - port: 80
      targetPort: 9011
